--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "processing",
   "main": "./lib/processing",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A short description of your package",
   "activationCommands": {
     "atom-workspace": "processing:run"
@@ -11,6 +11,5 @@
   "engines": {
     "atom": ">0.187.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
